commit on 'Master'

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <body>
         <nav> <!--Tabs users can navigate to get access to the menu, about, catering, apply, contact us.-->
             <ul id="website-nav">
-                <li><a href="">Menu</a></li>
-                <li><a href="">About</a></li>
-                <li><a href="">Catering</a></li>
-                <li><a href="">Apply</a></li>
-                <li><a href="">Contact Us</a></li>
+                <li><a href="/about.html" id="menu-button">Menu</a></li>
+                <li><a href="" id="about-button">About</a></li>
+                <li><a href="" id="catering-button">Catering</a></li>
+                <li><a href="" id="apply-button">Apply</a></li>
+                <li><a href="" id="contact-us-button">Contact Us</a></li>
             </ul>
         </nav>
     
