commit on 'Master'

--- a/about.html
+++ b/about.html
@@ -1,10 +1,23 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="" href="about.css">
+        <link rel="stylesheet" href="style.css">
+        <title>Gualbertos 2</title>
     </head>
 
     <body>
+        <nav> <!--Tabs users can navigate to get access to the menu, about, catering, apply, contact us.-->
+            <ul id="website-nav">
+                <li><a href="/menu.html" id="menu-button">Menu</a></li>
+                <li><a href="/about.html" id="about-button">About</a></li>
+                <li><a href="/catering.html" id="catering-button">Catering</a></li>
+                <li><a href="/apply.html" id="apply-button">Apply</a></li>
+                <li><a href="/contact-us.html" id="contact-us-button">Contact Us</a></li>
+            </ul>
+        </nav>
+
+    <body>
+        <link rel="stylesheet" href="about.css">
         <h2>Serving San Diego Since 1993</h2>
         <h5>During our 30 years of service, Quality has been our top priority.</h5>
     </body>
