--- a/content/about.html
+++ b/content/about.html
@@ -8,11 +8,11 @@
     <body>
         <nav> <!--Tabs users can navigate to get access to the menu, about, catering, apply, contact us.-->
             <ul id="website-nav">
-                <li><a href="/menu.html" id="menu-button">Menu</a></li>
-                <li><a href="/about.html" id="about-button">About</a></li>
-                <li><a href="/catering.html" id="catering-button">Catering</a></li>
-                <li><a href="/apply.html" id="apply-button">Apply</a></li>
-                <li><a href="/contact-us.html" id="contact-us-button">Contact Us</a></li>
+                <li><a href="/menu.html" id="menu-btn">Menu</a></li>
+                <li><a href="/about.html" id="about-btn">About</a></li>
+                <li><a href="/catering.html" id="catering-btn">Catering</a></li>
+                <li><a href="/apply.html" id="apply-btn">Apply</a></li>
+                <li><a href="/contact-us.html" id="contact-us-btn">Contact Us</a></li>
             </ul>
         </nav>
 
