commit on 'Master'

--- a/about.html
+++ b/about.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
+
+<!--TITLE-->
 <html>
     <head>
-        <link rel="stylesheet" href="style.css">
         <title>Gualbertos 2</title>
     </head>
-
     <body>
         <nav> <!--Tabs users can navigate to get access to the menu, about, catering, apply, contact us.-->
             <ul id="website-nav">
@@ -15,10 +15,20 @@
                 <li><a href="/contact-us.html" id="contact-us-btn">Contact Us</a></li>
             </ul>
         </nav>
+    </body>
+<!--TITLE-->
 
+<!--CONTENT-->
     <body>
         <link rel="stylesheet" href="about.css">
         <h2>Serving San Diego Since 1993</h2>
         <h5>During our 30 years of service, Quality has been our top priority.</h5>
     </body>
+<!--CONTENT-->
+
+<!--LEGAL INFO-->
+    <footer id="legal-info">
+        <p>Gualbertos 2 Copyright 2022 |  All right reserved</p>
+    </footer>
+<!--LEGAL INFO-->
 </html>
