--- a/index.html
+++ b/index.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 
+<!--TITLE-->
 <html>
     <head>
-        <link rel="stylesheet" href="style.css">
         <title>Gualbertos 2</title>
     </head>
-
     <body>
         <nav> <!--Tabs users can navigate to get access to the menu, about, catering, apply, contact us.-->
-            
             <ul id="website-nav">
                 <li><a href="/menu.html" id="menu-btn">Menu</a></li>
                 <li><a href="/about.html" id="about-btn">About</a></li>
@@ -17,19 +15,20 @@
                 <li><a href="/contact-us.html" id="contact-us-btn">Contact Us</a></li>
             </ul>
         </nav>
-    
+    </body>
+<!--TITLE-->
+
+<!--CONTENT-->
     <header id="main-title"> 
         <h1>Gualbertos 2</h1>
-        <h4>Mexican Food</h4>
+        <h3>Mexican Food</h3>
     </header>
+<!--CONTENT-->
 
-    <main>
-        <h4></h4>
-    </main>
-
+<!--LEGAL-->
     <footer id="legal-info">
-
+        <p>Gualbertos 2 Copyright 2022 |  All right reserved</p>
     </footer>
-
+<!--LEGAL-->
     </body>
 </html>
