commit on 'Master'

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <html>
     <head>
         <title>Gualbertos 2</title>
+        <link rel="stylesheet" href="styling.css">
     </head>
     <body>
         <nav> <!--Tabs users can navigate to get access to the menu, about, catering, apply, contact us.-->
