commit on 'Master'

--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
         <link rel="stylesheet" href="styling.css">
     </head>
     <body>
-        <nav id="web-nav"> <!--Tabs users can navigate to get access to the menu, about, catering, apply, contact us.-->
-            <a href="/menu.html" id="menu-btn">Menu</a>
-            <a href="/about.html" id="about-btn">About</a>
-            <a href="/catering.html" id="catering-btn">Catering</a>
-            <a href="/apply.html" id="apply-btn">Apply</a>
-            <a href="/contact-us.html" id="contact-us-btn">Contact Us</a>
+        <nav class="buttons"> <!--Tabs users can navigate to get access to the menu, about, catering, apply, contact us.-->
+            <a href="/menu.html">Menu</a>
+            <a href="/about.html">About</a>
+            <a href="/catering.html">Catering</a>
+            <a href="/apply.html">Apply</a>
+            <a href="/contact-us.html">Contact Us</a>
         </nav>
     </body>
 <!--TITLE-->
