commit on 'Master'

--- a/index.html
+++ b/index.html
@@ -31,3 +31,12 @@
 <!--LEGAL-->
     </body>
 </html>
+
+<ul class="navigation"> 
+    <li><a href="/index.html">Home</a></li>
+    <li><a href="/menu.html">Menu</a></li>
+    <li><a href="/about.html">About</a></li>
+    <li><a href="/catering.html">Catering</a></li>
+    <li><a href="/apply.html">Apply</a></li>
+    <li><a href="/contact-us.html">Contact Us</a></li>
+</ul>
