commit on 'Master'

--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
         <link rel="stylesheet" href="styling.css">
     </head>
     <body>
-        <nav class="buttons"> <!--Tabs users can navigate to get access to the menu, about, catering, apply, contact us.-->
-            <a href="/menu.html">Menu</a>
-            <a href="/about.html">About</a>
-            <a href="/catering.html">Catering</a>
-            <a href="/apply.html">Apply</a>
-            <a href="/contact-us.html">Contact Us</a>
-        </nav>
+        <ul class="navigation"> 
+            <li><a href="/index.html">Home</a></li>
+            <li><a href="/menu.html">Menu</a></li>
+            <li><a href="/about.html">About</a></li>
+            <li><a href="/catering.html">Catering</a></li>
+            <li><a href="/apply.html">Apply</a></li>
+            <li><a href="/contact-us.html">Contact Us</a></li>
+        </ul>
     </body>
 <!--TITLE-->
 
@@ -29,6 +30,8 @@
         <p>Gualbertos 2 Copyright 2022 |  All right reserved</p>
     </footer>
 <!--LEGAL-->
+
+
     </body>
 </html>
 
