commit on 'Master'

--- a/menu.html
+++ b/menu.html
@@ -4,15 +4,17 @@
 <html>
     <head>
         <title>Gualbertos 2</title>
+        <link rel="stylesheet" href="menu.css">
     </head>
     <body>
         <nav> <!--Tabs users can navigate to get access to the menu, about, catering, apply, contact us.-->
-            <ul id="website-nav">
-                <li><a href="/menu.html" id="menu-btn">Menu</a></li>
-                <li><a href="/about.html" id="about-btn">About</a></li>
-                <li><a href="/catering.html" id="catering-btn">Catering</a></li>
-                <li><a href="/apply.html" id="apply-btn">Apply</a></li>
-                <li><a href="/contact-us.html" id="contact-us-btn">Contact Us</a></li>
+            <ul class="navigation"> 
+                <li><a href="/index.html">Home</a></li>
+                <li><a href="/menu.html">Menu</a></li>
+                <li><a href="/about.html">About</a></li>
+                <li><a href="/catering.html">Catering</a></li>
+                <li><a href="/apply.html">Apply</a></li>
+                <li><a href="/contact-us.html">Contact Us</a></li>
             </ul>
         </nav>
     </body>
