commit on 'Master'

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <header id="main-title"> 
         <h1>Gualbertos 2</h1>
         <h3>Mexican Food</h3>
+        <p>This webite is still under development. Please be patient with us as we get everything set up :).</p>
     </header>
 <!--CONTENT-->
 
@@ -34,12 +35,3 @@
 
     </body>
 </html>
-
-<ul class="navigation"> 
-    <li><a href="/index.html">Home</a></li>
-    <li><a href="/menu.html">Menu</a></li>
-    <li><a href="/about.html">About</a></li>
-    <li><a href="/catering.html">Catering</a></li>
-    <li><a href="/apply.html">Apply</a></li>
-    <li><a href="/contact-us.html">Contact Us</a></li>
-</ul>
