commit on 'Master'

--- a/index.html
+++ b/index.html
@@ -20,13 +20,20 @@
 
 <!--CONTENT-->
     <header id="main-title"> 
-        <h1>Gualbertos 2</h1>
-        <h3>Mexican Food</h3>
-        <p>This webite is still under development. Please be patient with us as we get everything set up :).</p>
+        <h1 class="header-title">Gualbertos 2</h1>
+        <h3 class="header-caption">Mexican Food</h3>
+        <p class="header-info">This webite is still under development. Please be patient with us as we get everything set up :).</p>
     </header>
+<break>
+
+</break>
+    <body>
+        <h3>To place a phone order please call:</h3>
+        <a><img src="phone icon.png" id="phone-icon"/><h3>(858) 268-3209</h3></a>
+    </body>
 <!--CONTENT-->
 
-<!--LEGAL-->
+<!--LEGAL-->    
     <footer id="legal-info">
         <p>Gualbertos 2 Copyright 2022 |  All right reserved</p>
     </footer>
