commit on 'Master'

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 </break>
     <body>
         <h3>To place a phone order please call:</h3>
-        <a><img src="phone icon.png" id="phone-icon"/><h3>(858) 268-3209</h3></a>
+        <a href="tel:(858) 268-3209"><img src="" id="phone-icon"/><h3>(858) 268-3209</h3></a>
     </body>
 <!--CONTENT-->
 
