commit on 'Master'

--- a/catering.html
+++ b/catering.html
@@ -5,6 +5,15 @@
     <head>
         <title>Gualbertos 2</title>
         <link rel="stylesheet" href="catering.css">
+                <!-- Global site tag (gtag.js) - Google Analytics -->
+                <script async src="https://www.googletagmanager.com/gtag/js?id=UA-228418344-1">
+                </script>
+                <script>
+                window.dataLayer = window.dataLayer || [];
+                function gtag(){dataLayer.push(arguments);}
+                gtag('js', new Date());
+                gtag('config', 'UA-228418344-1');
+                </script>
     </head>
     <body>
         <nav> <!--Tabs users can navigate to get access to the menu, about, catering, apply, contact us.-->
