--- a/apply.html
+++ b/apply.html
@@ -5,6 +5,7 @@
     <head>
         <title>Gualbertos 2</title>
         <link rel="stylesheet" href="apply.css">
+
                 <!-- Global site tag (gtag.js) - Google Analytics -->
                 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-228418344-1">
                 </script>
@@ -14,6 +15,7 @@
                 gtag('js', new Date());
                 gtag('config', 'UA-228418344-1');
                 </script>
+                <!--Google Analytics-->
     </head>
     <body>
         <nav> <!--Tabs users can navigate to get access to the menu, about, catering, apply, contact us.-->
