--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
     <body>
         <h3>To place a phone order please call:</h3>
-        <a href="tel:(858) 268-3209"><img src="" id="phone-icon"/><h3>(858) 268-3209</h3></a>
+        <a href="tel:(858) 268-3209"><p id="phone-number">(858) 268-3209</p></a>
     </body>
 <!--CONTENT-->
 
