commit on 'Master'

--- a/index.html
+++ b/index.html
@@ -4,20 +4,21 @@
 <html>
     <head>
         <title>Gualbertos 2</title>
-        <link rel="stylesheet" href="styling.css">
-        <!-- Global site tag (gtag.js) - Google Analytics -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-228418344-1">
-        </script>
-        <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-        gtag('config', 'UA-228418344-1');
-        </script>
+            <link rel="stylesheet" href="styling.css">
+                <!-- Global site tag (gtag.js) - Google Analytics -->
+                <script async src="https://www.googletagmanager.com/gtag/js?id=UA-228418344-1">
+                </script>
+                <script>
+                window.dataLayer = window.dataLayer || [];
+                function gtag(){dataLayer.push(arguments);}
+                gtag('js', new Date());
+                gtag('config', 'UA-228418344-1');
+                </script>
     </head>
     <body>
         <ul class="navigation"> 
             <li><a href="/index.html">Home</a></li>
+            <li><a href="/order.html">Order</a></li>
             <li><a href="/menu.html">Menu</a></li>
             <li><a href="/about.html">About</a></li>
             <li><a href="/catering.html">Catering</a></li>
