--- a/order.html
+++ b/order.html
@@ -4,7 +4,7 @@
 <html>
     <head>
         <title>Gualbertos 2</title>
-        <link rel="stylesheet" href="contact-us.css">
+        <link rel="stylesheet" href="about.css">
                 <!-- Global site tag (gtag.js) - Google Analytics -->
                 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-228418344-1">
                 </script>
@@ -31,13 +31,12 @@
 <!--TITLE-->
 
 <!--CONTENT-->
-    <body>
-    </body>
+    <header>
+        <ul>
+            <li><a href=""><img src="">UBEREATS</a></li>
+            <li><a href=""><img src="">DOORDASH</a></li>
+            <li><a href=""><img src="">GRUBHUB</a></li>
+            <li><a href=""><img src="">CLOVER</a></li>
+        </ul>
+    </header>
 <!--CONTENT-->
-
-<!--LEGAL-->
-    <footer id="legal-info">
-        <p>Gualbertos 2 Copyright 2022 |  All right reserved</p>
-    </footer>
-<!--LEGAL-->
-</html>
