--- a/catering.html
+++ b/catering.html
@@ -19,6 +19,7 @@
         <nav> <!--Tabs users can navigate to get access to the menu, about, catering, apply, contact us.-->
             <ul class="navigation"> 
                 <li><a href="/index.html">Home</a></li>
+                <li><a href="/order.html">Order</a></li>
                 <li><a href="/menu.html">Menu</a></li>
                 <li><a href="/about.html">About</a></li>
                 <li><a href="/catering.html">Catering</a></li>
