commit on 'Master'

--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
     <footer id="legal-info">
         <p>Gualbertos 2 Copyright 2022 |  All right reserved</p>
     </footer>
+
+    <img src="cactus.jpeg"/>
 <!--LEGAL-->
 
 
