commit on 'Master'

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     </head>
     <body>
         <ul class="navigation"> 
+            <li><a href="/index.html"><img src="" id="Gualbrtos-Logo"/>Gualbertos 2</a></li>
             <li><a href="/index.html">Home</a></li>
             <li><a href="/order.html">Order</a></li>
             <li><a href="/menu.html">Menu</a></li>
@@ -30,8 +31,20 @@
 
 <!--CONTENT-->
     <header id="main-title"> 
-        <h1 class="header-title">Gualbertos 2</h1>
         <h3 class="header-caption">Mexican Food</h3>
+        <!-- hours -->
+        <h4>
+            <ul>
+                <li>Monday: 6am - 8pm</li>
+                <li>Tuesday: 6am - 8pm</li>
+                <li>Wednesday: 6am - 8pm</li>
+                <li>Thursday: 6am - 8pm</li>
+                <li>Friday: 6am - 8pm</li>
+                <li>Saturday: 6am - 7pm</li>
+                <li>Sunday: 7am - 6pm</li>
+            </ul>
+        </h4>
+        <!-- hours -->
         <p class="header-info">This webite is still under development. Please be patient with us as we get everything set up :).</p>
     </header>
 
