commit on 'Master'

--- a/catering.html
+++ b/catering.html
@@ -18,6 +18,7 @@
     <body>
         <nav> <!--Tabs users can navigate to get access to the menu, about, catering, apply, contact us.-->
             <ul class="navigation"> 
+                <li><a href="/index.html"><img src="" id="Gualbrtos-Logo"/>Gualbertos 2</a></li>
                 <li><a href="/index.html">Home</a></li>
                 <li><a href="/order.html">Order</a></li>
                 <li><a href="/menu.html">Menu</a></li>
@@ -34,7 +35,7 @@
     <body>
         <h2>We do offer Catering. Please contact us for more information</h2>
         <h3>Phone:</h3>
-        <h3>Email:</h3>
+        <h3>Email: </h3>
     </body>
 <!--CONTENT-->
 
