--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </head>
     <body>
         <ul class="navigation"> 
-            <li><a href="/index.html"><img src="" id="Gualbrtos-Logo"/>Gualbertos 2</a></li>
+            <li><a href="/index.html"><img src="" id="Gualbertos-Logo"/>Gualbertos 2</a></li>
             <li><a href="/index.html">Home</a></li>
             <li><a href="/order.html">Order</a></li>
             <li><a href="/menu.html">Menu</a></li>
@@ -31,7 +31,9 @@
 
 <!--CONTENT-->
     <header id="main-title"> 
-        <h3 class="header-caption">Mexican Food</h3>
+        <h3 class="header-hours">Hours</h3>
+
+
         <!-- hours -->
         <h4>
             <ul>
@@ -45,6 +47,9 @@
             </ul>
         </h4>
         <!-- hours -->
+
+        <br>
+
         <p class="header-info">This webite is still under development. Please be patient with us as we get everything set up :).</p>
     </header>
 
