--- a/order.html
+++ b/order.html
@@ -18,6 +18,7 @@
     <body>
         <nav> <!--Tabs users can navigate to get access to the menu, about, catering, apply, contact us.-->
             <ul class="navigation"> 
+                <li><a href="/index.html"><img src="" id="Gualbrtos-Logo"/>Gualbertos 2</a></li>
                 <li><a href="/index.html">Home</a></li>
                 <li><a href="/order.html">Order</a></li>
                 <li><a href="/menu.html">Menu</a></li>
@@ -32,9 +33,11 @@
 
 <!--CONTENT-->
     <header>
+        <h1>Order through one of the services below.</h1>
+        <h4>We currently do not have our own services set up to make purchases through this site.</h4>
         <ul>
             <li><a href=""><img src="">UBEREATS</a></li>
-            <li><a href=""><img src="">DOORDASH</a></li>
+            <li><a href=""><img src="">POSTMATES</a></li>
             <li><a href=""><img src="">GRUBHUB</a></li>
             <li><a href=""><img src="">CLOVER</a></li>
         </ul>
