commit on 'Master'

--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
 
 <!--LEGAL INFO-->
     <footer id="legal-info">
-        <p>Gualbertos 2 Copyright 2022 |  All right reserved</p>
+        <p>Gualbertos 2 Copyright 2022 |  All rights reserved</p>
     </footer>
 <!--LEGAL INFO-->
 </html>
