--- a/order.html
+++ b/order.html
@@ -42,3 +42,10 @@
         </ul>
     </header>
 <!--CONTENT-->
+
+<!--LEGAL INFO-->
+<footer id="legal-info">
+    <p>Gualbertos 2 Copyright 2022 |  All rights reserved</p>
+</footer>
+<!--LEGAL INFO-->
+</html>
