--- a/menu.html
+++ b/menu.html
@@ -38,7 +38,7 @@
 
 <!--LEGAL-->
     <footer id="legal-info">
-        <p>Gualbertos 2 Copyright 2022 |  All right reserved</p>
+        <p>Gualbertos 2 Copyright 2022 |  All rights reserved</p>
     </footer>
 <!--LEGAL-->
 </html>
