commit on 'Master'

--- a/order.html
+++ b/order.html
@@ -32,13 +32,13 @@
 
 <!--CONTENT-->
     <header>
-        <h1>Order through one of the services below.</h1>
+        <h1>Click and Order through one of the services below.</h1>
         <h4>We currently do not have our own services set up to make purchases through this site.</h4>
         <ul>
-            <li><a href=""><img src="">UBEREATS</a></li>
-            <li><a href=""><img src="">POSTMATES</a></li>
-            <li><a href=""><img src="">GRUBHUB</a></li>
-            <li><a href=""><img src="">CLOVER</a></li>
+            <li><a href="https://www.ubereats.com/store/gualbertos-taco-shop-%232/-6cPlv7ZSGGbqp256Kj16g?diningMode=DELIVERY"><img src="ubereats-icon.png">UBEREATS</a></li>
+            <li><a href="https://postmates.com/store/gualbertos-taco-shop-%232/-6cPlv7ZSGGbqp256Kj16g?ad_id=542502452789&campaign_id=12671081414&diningMode=DELIVERY&gclid=Cj0KCQjwg_iTBhDrARIsAD3Ib5j8HOXeRUr-hGqN39m4GxWjZ49PpzKxCjnHlVvf2kX2RwDVreIxwEoaAvATEALw_wcB&gclsrc=aw.ds&kw=&kwid=dsa-69773316985&pl=JTdCJTIyYWRkcmVzcyUyMiUzQSUyMlNhbiUyMERpZWdvJTIyJTJDJTIycmVmZXJlbmNlJTIyJTNBJTIyQ2hJSmY5VHdaTkRfMjRBUjZzRGJtN2ZPYWo4JTIyJTJDJTIycmVmZXJlbmNlVHlwZSUyMiUzQSUyMmdvb2dsZV9wbGFjZXMlMjIlMkMlMjJsYXRpdHVkZSUyMiUzQTMyLjgxMDI1MzQlMkMlMjJsb25naXR1ZGUlMjIlM0EtMTE3LjEzMjM1NzklN0Q%3D&placement=&utm_campaign=CM2086135-search-google-nonbrand_1_21_US-San%20Diego_pm-e_web_acq_cpc_en_DSA_Exact__dsa-69773316985_542502452789_125967230088__c&utm_source=AdWords_NonBrand"><img src="postmates-icon.jpeg">POSTMATES</a></li>
+            <li><a href="https://www.grubhub.com/restaurant/gualbertos-taco-shop-2-5447-kearny-villa-rd-san-diego/2215802"><img src="grubhub-icon.png">GRUBHUB</a></li>
+            <li><a href="https://www.clover.com/online-ordering/gualbertos-taco-shop-2-san-diego/?employee_id=ZBE92E7EVMHEP&order_type=dine_in"><img src="">CLOVER (pick up only)</a></li>
         </ul>
     </header>
 <!--CONTENT-->
