--- a/order.html
+++ b/order.html
@@ -34,11 +34,11 @@
     <header>
         <h1>Click and Order through one of the services below.</h1>
         <h4>We currently do not have our own services set up to make purchases through this site.</h4>
-        <ul class="column-list">
-            <li>UberEats</li>
-            <li>Postmates</li>
-            <li>Grubhub</li>
-            <li>Clover></li>
+        <ul>
+            <li class="column-list">UberEats</li>
+            <li class="column-list">Postmates</li>
+            <li class="column-list">Grubhub</li>
+            <li class="column-list">Clover</li>
         </ul>
         <ul class="column-list-content">
             <li><a href="https://www.ubereats.com/store/gualbertos-taco-shop-%232/-6cPlv7ZSGGbqp256Kj16g?diningMode=DELIVERY"><img src="ubereats-icon.png">UBEREATS</a></li>
