commit on 'Master'

--- a/order.html
+++ b/order.html
@@ -35,10 +35,10 @@
         <h1>Click and Order through one of the services below.</h1>
         <h4>We currently do not have our own services set up to make purchases through this site.</h4>
             <body class="row-list"> <!--This will be used for rows soon-->
-                <p>class="row-list">UberEats</p>
-                <p>class="row-list">Postmates</p>
-                <p>lass="row-list">Grubhub</p>
-                <p>Clover</p>
+                <p class="row-list">UberEats</p>
+                <p class="row-list">Postmates</p>
+                <p class="row-list">Grubhub</p>
+                <p class="row-list">Clover</p>
             </body> <!--This will be used for rowws soon-->
         <ul class="column-list-content">
             <li><a href="https://www.ubereats.com/store/gualbertos-taco-shop-%232/-6cPlv7ZSGGbqp256Kj16g?diningMode=DELIVERY"><img class="uber-eats-icon" src="ubereats-icon.png" alt="UberEats"></a></li>
