commit on 'master'

--- a/order.html
+++ b/order.html
@@ -34,7 +34,7 @@
     <header>
         <h1>Click and Order through one of the services below.</h1>
         <h4>We currently do not have our own services set up to make purchases through this site.</h4>
-            <body class="row-list"> <!--This will be used for rows soon-->
+            <body> <!--This will be used for rows soon-->
                 <p class="row-list">UberEats</p>
                 <p class="row-list">Postmates</p>
                 <p class="row-list">Grubhub</p>
