commit on 'master'

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <head>
         <title>Gualbertos 2</title>
             <link rel="stylesheet" href="styling.css">
+            <link rel="preconnect" href="https://fonts.googleapis.com">
+            <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+            <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;500&display=swap" rel="stylesheet">
                 <!-- Global site tag (gtag.js) - Google Analytics -->
                 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-228418344-1">
                 </script>
