--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
                 </script>
     </head>
     <body>
+        <ul class="gual-logo">
+            <li><a href="/index.html"><img src=""></a></li>
+        </ul>
         <ul class="navigation"> 
-            <li><a href="/index.html"><img src="" id="Gualbertos-Logo"/>Gualbertos 2</a></li>
             <li><a href="/order.html">Order</a></li>
             <li><a href="/menu.html">Menu</a></li>
             <li><a href="/about.html">About</a></li>
