commit on 'master'

--- a/index.html
+++ b/index.html
@@ -19,10 +19,8 @@
                 </script>
     </head>
     <body>
-        <ul class="gual-logo">
-            <li><a href="/index.html"><img src=""></a></li>
-        </ul>
         <ul class="navigation"> 
+            <li class="gual-logo"><a href="/index.html"><img src="">Gualbertos 2</a></li>
             <li><a href="/order.html">Order</a></li>
             <li><a href="/menu.html">Menu</a></li>
             <li><a href="/about.html">About</a></li>
