commit on 'master'

--- a/index.html
+++ b/index.html
@@ -33,12 +33,10 @@
 
 <!--CONTENT-->
     <header id="main-title"> 
-        <h3 class="header-hours">Hours</h3>
-
-
         <!-- hours -->
+        <h3 class="header-hours">Hours</h3>
         <h4>
-            <ul>
+            <ul class="header-hours">
                 <li>Monday: 6am - 8pm</li>
                 <li>Tuesday: 6am - 8pm</li>
                 <li>Wednesday: 6am - 8pm</li>
