--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
         <h3 class="header-hours">Hours</h3>
         <h4>
             <ul class="header-hours">
-                <li>Monday: 6am - 8pm</li>
-                <li>Tuesday: 6am - 8pm</li>
-                <li>Wednesday: 6am - 8pm</li>
-                <li>Thursday: 6am - 8pm</li>
-                <li>Friday: 6am - 8pm</li>
-                <li>Saturday: 6am - 7pm</li>
-                <li>Sunday: 7am - 6pm</li>
+                <li>Monday: 6AM - 8PM</li>
+                <li>Tuesday: 6AM - 8PM</li>
+                <li>Wednesday: 6AM - 8PM</li>
+                <li>Thursday: 6AM - 8PM</li>
+                <li>Friday: 6AM - 8PM</li>
+                <li>Saturday: 6AM - 7PM</li>
+                <li>Sunday: 7AM - 6PM</li>
             </ul>
         </h4>
         <!-- hours -->
