commit on 'master'

--- a/index.html
+++ b/index.html
@@ -46,12 +46,13 @@
                 <li>Sunday: 7AM - 6PM</li>
             </ul>
         </h4>
+    </header>
         <!-- hours -->
 
         <br>
-
+    <body>
         <p class="header-info">This webite is still under development. Please be patient with us as we get everything set up :).</p>
-    </header>
+    </body>
 
     <body>
         <h3>To place a phone order please call:</h3>
