commit on 'master'

--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
                 gtag('js', new Date());
                 gtag('config', 'UA-228418344-1');
                 </script>
+    </head>
+    <header>
         <ul class="navigation"> 
-            <li class="gual-logo"><a href="/index.html"><img src="">Gualbertos 2</a></li>
+            <li class="gual-logo"><a href="/index.html" class="gual-logo"><img src="" class="gual-logo">Gualbertos 2</a></li>
             <li><a href="/order.html">Order</a></li>
             <li><a href="/menu.html">Menu</a></li>
             <li><a href="/about.html">About</a></li>
@@ -26,15 +28,15 @@
             <li><a href="/apply.html">Apply</a></li>
             <li><a href="/contact-us.html">Contact Us</a></li>
         </ul>
-    </head>
+    </header>
 <!--TITLE-->
 
 <!--CONTENT-->
-    <header id="main-title"> 
+    <body id="main-title"> 
         <!-- hours -->
-        <h3 class="header-hours">Hours</h3>
+        <h3 class="body-hours">Hours</h3>
         <h4>
-            <ul class="header-hours">
+            <ul class="body-hours">
                 <li>Monday: 6AM - 8PM</li>
                 <li>Tuesday: 6AM - 8PM</li>
                 <li>Wednesday: 6AM - 8PM</li>
@@ -44,12 +46,12 @@
                 <li>Sunday: 7AM - 6PM</li>
             </ul>
         </h4>
-    </header>
+    </body>
         <!-- hours -->
 
         <br>
     <body>
-        <p class="header-info">This webite is still under development. Please be patient with us as we get everything set up :).</p>
+        <p class="body-info">This webite is still under development. Please be patient with us as we get everything set up :).</p>
     </body>
 
     <body>
