--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                 gtag('config', 'UA-228418344-1');
                 </script>
     </head>
+
     <header>
         <ul class="navigation"> 
             <li class="gual-logo"><a href="/index.html" class="gual-logo"><img src="" class="gual-logo">Gualbertos 2</a></li>
@@ -34,7 +35,7 @@
 <!--CONTENT-->
     <body id="main-title"> 
         <!-- hours -->
-        <h3 class="body-hours">Hours</h3>
+        <h3 class="body-hours-header">Hours</h3>
         <h4>
             <ul class="body-hours">
                 <li>Monday: 6AM - 8PM</li>
