commit on 'master;

--- a/index.html
+++ b/index.html
@@ -33,29 +33,26 @@
 <!--TITLE-->
 
 <!--CONTENT-->
-    <body id="main-title"> 
+    <body> 
         <!-- hours -->
-        <h3 class="body-hours-header">Hours</h3>
-        <h4>
-            <ul class="body-hours">
-                <li>Monday: 6AM - 8PM</li>
-                <li>Tuesday: 6AM - 8PM</li>
-                <li>Wednesday: 6AM - 8PM</li>
-                <li>Thursday: 6AM - 8PM</li>
-                <li>Friday: 6AM - 8PM</li>
-                <li>Saturday: 6AM - 7PM</li>
-                <li>Sunday: 7AM - 6PM</li>
-            </ul>
-        </h4>
-    </body>
+        <div class="body-hours-div">
+            <h3 class="body-hours-header">Hours</h3>
+            <h4>
+                <ul class="body-hours">
+                    <li>Monday: 6AM - 8PM</li>
+                    <li>Tuesday: 6AM - 8PM</li>
+                    <li>Wednesday: 6AM - 8PM</li>
+                    <li>Thursday: 6AM - 8PM</li>
+                    <li>Friday: 6AM - 8PM</li>
+                    <li>Saturday: 6AM - 7PM</li>
+                    <li>Sunday: 7AM - 6PM</li>
+                </ul>
+            </h4>
+        </div>
         <!-- hours -->
 
         <br>
-    <body>
         <p class="body-info">This webite is still under development. Please be patient with us as we get everything set up :).</p>
-    </body>
-
-    <body>
         <h3>To place a phone order please call:</h3>
         <a href="tel:(858) 268-3209"><p id="phone-number">(858) 268-3209</p></a>
     </body>
@@ -66,7 +63,4 @@
         <p>Gualbertos 2 Copyright 2022 |  All rights reserved</p>
     </footer>
 <!--LEGAL-->
-
-
-    </body>
 </html>
