commit on master

--- a/pages/delivery.html
+++ b/pages/delivery.html
@@ -3,54 +3,40 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <meta name="description" content="Gualbertos 2 Mexican Food Taco Shop Website. Serving San Diego since 1993."/>
   <title>Mexican Food</title>
 
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-  <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link href="../css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link href="../css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 </head>
 <body style="background-image: url(https://background-tiles.com/overview/white/patterns/large/1025.png);background-repeat: repeat;">
   <nav class="white" role="navigation">
     <div class="nav-wrapper container">
-      <a id="logo-container" href="index.html" class="brand-logo"><span class="green-text">Gualbertos 2</span> <span class="red-text">Mexican Food</span></a>
+      <a id="logo-container" href="../index.html" class="brand-logo"><span class="green-text">Gualbertos 2</span> <span class="red-text">Mexican Food</span></a>
       <ul class="right hide-on-med-and-down">
-        <li><a class="grey-text" href="pages/menu.html">Menu</a></li>
-        <li><a class="grey-text" href="pages/delivery.html">Delivery</a></li>
-        <li><a class="grey-text" href="pages/careers.html">Careers</a></li>
-        <li><a class="grey-text" href="pages/contact-us.html">Contact Us</a></li>
+        <li><a class="grey-text" href="menu.html">Menu</a></li>
+        <li><a class="grey-text" href="delivery.html">Delivery</a></li>
+        <li><a class="grey-text" href="careers.html">Careers</a></li>
+        <li><a class="grey-text" href="contact-us.html">Contact Us</a></li>
       </ul>
 
       <ul id="nav-mobile" class="sidenav">
-        <li><a href="pages/menu.html" class="active">Menu</a></li>
-        <li><a href="pages/delivery.html">Delivery</a></li>
-        <li><a href="pages/careers.html">Careers</a></li>
-        <li><a href="pages/contact-us.html">Contact Us</a></li>
+        <li><a href="../pages/menu.html">Menu</a></li>
+        <li><a href="../pages/delivery.html" class="active">Delivery</a></li>
+        <li><a href="../pages/careers.html">Careers</a></li>
+        <li><a href="../pages/contact-us.html">Contact Us</a></li>
       </ul>
       <a href="#" data-target="nav-mobile" class="sidenav-trigger orange-text"><i class="material-icons">menu</i></a>
     </div>
   </nav>
 
-  <div id="index-banner" class="parallax-container">
-    <div class="section no-pad-bot">
       <div class="container">
-        <br><br>
-        <div class="section z-depth-5" style="background-color: rgba(0,0,0,0.25); border-radius: 5px;">
-          <h1 class="header center white-text">Order for Pickup</h1>
+          <h1 class="header center white-text-1">Order for Delivery</h1>
           <div class="row center">
-            <h5 class="header col s12 light white-text">Click to Order Online or Call in your Order.</h5>
+            <h5 class="header col s12 light white-text-1">Choose one of the delivery services below and start your order!</h5>
           </div>
-          <div class="row center">
-            <a href="https://www.clover.com/online-ordering/gualbertos-taco-shop-2-san-diego/?employee_id=ZBE92E7EVMHEP&order_type=dine_in" id="download-button" class="btn-large waves-effect waves-light orange lighten-1 pulse">Online Order</a>
-            <a href="tel:(858) 268-3209" id="download-button" class="btn-large waves-effect waves-light orange lighten-1 pulse">Call-in</a>
-          </div>
-        </div>
-
       </div>
-    </div>
-    <div class="parallax"><img src="https://fondosmil.com/fondo/35792.jpg" alt="Unsplashed background img 1"></div>
-  </div>
 
 
   <div class="container">
@@ -60,28 +46,28 @@
       <div class="row">
         <div class="col s12 m4">
           <div class="icon-block">
-            <img class="taco" src="imgs/taco.png">
-            <h5 class="center">Family owned Fresh and Delicious Food</h5>
+            <a href="https://www.grubhub.com/restaurant/gualbertos-taco-shop-2-5447-kearny-villa-rd-san-diego/2215802"><img class="grubhub" src="../imgs/grubhub.png"></a>
+            <h5 class="center">Grubhub</h5>
 
-            <p class="light">We are a family owned business, we make our food fresh every day. Locally selected and sourced every single day. Please take a look at our menu for all the amazing options</p>
+            <p class="light"></p>
           </div>
         </div>
 
         <div class="col s12 m4">
           <div class="icon-block">
-            <img class="taco-truck" src="imgs/food-truck.png">
-            <h5 class="center">Order for Delivery through a Certified Service</h5>
+            <a href="https://www.ubereats.com/store/gualbertos-taco-shop-%232/-6cPlv7ZSGGbqp256Kj16g?ad_id=599573182504&campaign_id=14240709496&gclid=CjwKCAjw2f-VBhAsEiwAO4lNeNaQ8qYM_2vHJDC_dkRIP3Dvz1yGexG4HJ4M0KjEhzaAX6U6csBwSxoC-uMQAvD_BwE&gclsrc=aw.ds&kw=f%3Aaggregator_serp%3Afeature_id_fprint%3D13314542347858804144&kwid=kwd-1021360524138&pl=JTdCJTIyYWRkcmVzcyUyMiUzQSUyMlZvbnMlMjIlMkMlMjJyZWZlcmVuY2UlMjIlM0ElMjIxYjA4YjJkNS0zYmFiLTU4MGMtNzczOS0wYTBhYjc3ZTJjNzYlMjIlMkMlMjJyZWZlcmVuY2VUeXBlJTIyJTNBJTIydWJlcl9wbGFjZXMlMjIlMkMlMjJsYXRpdHVkZSUyMiUzQTMyLjc0OTc4MyUyQyUyMmxvbmdpdHVkZSUyMiUzQS0xMTcuMTY4MjglN0Q%3D&placement=&utm_campaign=CM2143447-search-nonbrand-google-localads_1_21_US-SanDiego_e_all_acq_cpc_en_PPA_Exact_0_f%3Aaggregator_serp%3Afeature_id_fprint%3D13314542347858804144_kwd-1021360524138_599573182504_137772783795__c&utm_medium=cpc-localads&utm_medium=&utm_source=google&utm_source=google"><img class="uber-eats" src="../imgs/uber-ets.jpeg"></a>
+            <h5 class="center">UberEats</h5>
 
-            <p class="light">Order for delivery through one of our 3rd party services: UberEats, Postmates, GrubHub. Be sure to select your Salsa of choice through the app you choose or leave special instructions for your driver.<em> Prices may vary</em>.</p>
+            <p class="light"></p>
           </div>
         </div>
 
         <div class="col s12 m4">
           <div class="icon-block">
-            <img class="enchilada" src="imgs/enchilada.png">
-            <h5 class="center">Serving San Diego since 1993</h5>
+            <a href="https://postmates.com/store/gualbertos-taco-shop-%232/-6cPlv7ZSGGbqp256Kj16g?diningMode=DELIVERY&pl=JTdCJTIyYWRkcmVzcyUyMiUzQSUyMlNhbiUyMERpZWdvJTIyJTJDJTIycmVmZXJlbmNlJTIyJTNBJTIyQ2hJSmY5VHdaTkRfMjRBUjZzRGJtN2ZPYWo4JTIyJTJDJTIycmVmZXJlbmNlVHlwZSUyMiUzQSUyMmdvb2dsZV9wbGFjZXMlMjIlMkMlMjJsYXRpdHVkZSUyMiUzQTMyLjgxMDI1MzQlMkMlMjJsb25naXR1ZGUlMjIlM0EtMTE3LjEzMjM1NzklN0Q%3D"><img class="postmates" src="../imgs/Postmates.png"></a>
+            <h5 class="center">Postmates</h5>
 
-            <p class="light">Open and serving the wonderful community of San Diego for almost 30 years! We are grateful for being able to serve the amazing people and love seeing familiar faces come back for more.</p>
+            <p class="light"></p>
           </div>
         </div>
       </div>
@@ -147,8 +133,8 @@
 
   <!--  Scripts-->
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-  <script src="js/materialize.js"></script>
-  <script src="js/init.js"></script>
+  <script src="../js/materialize.js"></script>
+  <script src="../js/init.js"></script>
   
   </body>
 </html>
