--- a/pages/contact-us.html
+++ b/pages/contact-us.html
@@ -3,54 +3,46 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <meta name="description" content="Gualbertos 2 Mexican Food Taco Shop Website. Serving San Diego since 1993."/>
   <title>Mexican Food</title>
 
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-  <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link href="../css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link href="../css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 </head>
 <body style="background-image: url(https://background-tiles.com/overview/white/patterns/large/1025.png);background-repeat: repeat;">
   <nav class="white" role="navigation">
     <div class="nav-wrapper container">
-      <a id="logo-container" href="index.html" class="brand-logo"><span class="green-text">Gualbertos 2</span> <span class="red-text">Mexican Food</span></a>
+      <a id="logo-container" href="../index.html" class="brand-logo"><span class="green-text">Gualbertos 2</span> <span class="red-text">Mexican Food</span></a>
       <ul class="right hide-on-med-and-down">
-        <li><a class="grey-text" href="pages/menu.html">Menu</a></li>
-        <li><a class="grey-text" href="pages/delivery.html">Delivery</a></li>
-        <li><a class="grey-text" href="pages/careers.html">Careers</a></li>
-        <li><a class="grey-text" href="pages/contact-us.html">Contact Us</a></li>
+        <li><a class="grey-text" href="menu.html">Menu</a></li>
+        <li><a class="grey-text" href="delivery.html">Delivery</a></li>
+        <li><a class="grey-text" href="careers.html">Careers</a></li>
+        <li><a class="grey-text" href="contact-us.html">Contact Us</a></li>
       </ul>
 
       <ul id="nav-mobile" class="sidenav">
-        <li><a href="pages/menu.html" class="active">Menu</a></li>
-        <li><a href="pages/delivery.html">Delivery</a></li>
-        <li><a href="pages/careers.html">Careers</a></li>
-        <li><a href="pages/contact-us.html">Contact Us</a></li>
+        <li><a href="../pages/menu.html">Menu</a></li>
+        <li><a href="../pages/delivery.html">Delivery</a></li>
+        <li><a href="../pages/careers.html">Careers</a></li>
+        <li><a href="../pages/contact-us.html" class="active">Contact Us</a></li>
       </ul>
       <a href="#" data-target="nav-mobile" class="sidenav-trigger orange-text"><i class="material-icons">menu</i></a>
     </div>
   </nav>
 
-  <div id="index-banner" class="parallax-container">
-    <div class="section no-pad-bot">
+
       <div class="container">
         <br><br>
-        <div class="section z-depth-5" style="background-color: rgba(0,0,0,0.25); border-radius: 5px;">
-          <h1 class="header center white-text">Order for Pickup</h1>
+          <h1 class="header center white-text-1">Let us know your Thoughts</h1>
           <div class="row center">
-            <h5 class="header col s12 light white-text">Click to Order Online or Call in your Order.</h5>
-          </div>
-          <div class="row center">
-            <a href="https://www.clover.com/online-ordering/gualbertos-taco-shop-2-san-diego/?employee_id=ZBE92E7EVMHEP&order_type=dine_in" id="download-button" class="btn-large waves-effect waves-light orange lighten-1 pulse">Online Order</a>
-            <a href="tel:(858) 268-3209" id="download-button" class="btn-large waves-effect waves-light orange lighten-1 pulse">Call-in</a>
-          </div>
+            <h5 class="header col s12 light white-text-1">Please do not hesitate to call or email us with any questions, concerns, or comments. You can also fill out the form below and we will get back to you as soon as possible.</h5>
         </div>
 
       </div>
-    </div>
-    <div class="parallax"><img src="https://fondosmil.com/fondo/35792.jpg" alt="Unsplashed background img 1"></div>
-  </div>
+
+
+
 
 
   <div class="container">
@@ -60,28 +52,28 @@
       <div class="row">
         <div class="col s12 m4">
           <div class="icon-block">
-            <img class="taco" src="imgs/taco.png">
-            <h5 class="center">Family owned Fresh and Delicious Food</h5>
+            <h2 class="center brown-text"><i class="material-icons medium">alternate_email</i></h2>
+            <h5 class="center">Email us</h5>
 
-            <p class="light">We are a family owned business, we make our food fresh every day. Locally selected and sourced every single day. Please take a look at our menu for all the amazing options</p>
+            <p class="light-1" style="text-align: center;"><a href="mailto: info@gualbertos2.com">info@gualbertos2.com</a></p>
           </div>
         </div>
 
         <div class="col s12 m4">
           <div class="icon-block">
-            <img class="taco-truck" src="imgs/food-truck.png">
-            <h5 class="center">Order for Delivery through a Certified Service</h5>
+            <h2 class="center brown-text"><i class="material-icons medium">support_agent</i></h2>
+            <h5 class="center">Call Us</h5>
 
-            <p class="light">Order for delivery through one of our 3rd party services: UberEats, Postmates, GrubHub. Be sure to select your Salsa of choice through the app you choose or leave special instructions for your driver.<em> Prices may vary</em>.</p>
+            <p class="light-1" style="text-align: center;"><a href="tel:(858) 268-3209">(858)268-3209</a></p>
           </div>
         </div>
 
         <div class="col s12 m4">
           <div class="icon-block">
-            <img class="enchilada" src="imgs/enchilada.png">
-            <h5 class="center">Serving San Diego since 1993</h5>
+            <h2 class="center brown-text"><i class="material-icons medium">textsms</i></h2>
+            <h5 class="center">Message Us</h5>
 
-            <p class="light">Open and serving the wonderful community of San Diego for almost 30 years! We are grateful for being able to serve the amazing people and love seeing familiar faces come back for more.</p>
+            <p class="light-1" style="text-align: center;"></p>
           </div>
         </div>
       </div>
@@ -147,8 +139,8 @@
 
   <!--  Scripts-->
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-  <script src="js/materialize.js"></script>
-  <script src="js/init.js"></script>
+  <script src="../js/materialize.js"></script>
+  <script src="../js/init.js"></script>
   
   </body>
 </html>
